fix tab flickering issue

--- a/.mozilla/firefox/6y9vju3y.tor/chrome/userChrome.css
+++ b/.mozilla/firefox/6y9vju3y.tor/chrome/userChrome.css
@@ -59,7 +59,6 @@ font-family:CtrlD !important
 }
 #navigator-toolbox .toolbarbutton-1 {
   background: black;
-  width: 26px;
   border-left: solid 1px black;
   box-shadow: none !important;
   padding: 0 !important;
